--- a/Sign Up Code.html
+++ b/Sign Up Code.html
@@ -6,14 +6,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      padding: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(-45deg, #2c003e, #3b1f5c, #4b2a6f, #6c3fa0);
       background-size: 400% 400%;
       animation: gradientShift 30s ease infinite;
       overflow: hidden;
       position: relative;
+      color: #fff;
     }
 
     @keyframes gradientShift {
@@ -22,27 +23,55 @@
       100% { background-position: 0% 50%; }
     }
 
-    .particles {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 1;
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: rgba(0,0,0,0.6);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
 
-    .particles .dot {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 50%;
-      animation: float 12s linear infinite;
+    .nav-left {
+      display: flex;
+      gap: 30px;
     }
 
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-100vh); opacity: 0; }
+    .nav-item {
+      font-weight: 600;
+      font-size: 16px;
+      color: #888;
+      text-decoration: line-through;
+      cursor: not-allowed;
+      position: relative;
+    }
+
+    .nav-item.home {
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .nav-item.home:hover {
+      color: #9b59b6;
+      text-shadow: 0 0 6px #9b59b6;
+    }
+
+    .nav-item.disabled:hover::after {
+      content: "Need to sign in to access";
+      position: absolute;
+      top: 120%;
+      left: 0;
+      background: #222;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 12px;
+      white-space: nowrap;
+      color: #fff;
+      opacity: 0.9;
     }
 
     .container {
@@ -55,7 +84,7 @@
       border-radius: 20px;
       box-shadow: 0 0 40px rgba(0,0,0,0.8);
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
       animation: enterGlow 1.2s ease-out;
       z-index: 2;
     }
@@ -79,7 +108,6 @@
       text-align: center;
       margin-bottom: 30px;
       font-weight: 600;
-      color: #f1f1f1;
       font-size: 2rem;
     }
 
@@ -130,7 +158,14 @@
   </style>
 </head>
 <body>
-  <div class="particles"></div>
+  <div class="navbar">
+    <div class="nav-left">
+      <a href="index.html" class="nav-item home">Home</a>
+      <div class="nav-item disabled">Marketplace</div>
+      <div class="nav-item disabled">Download</div>
+      <div class="nav-item disabled">Search</div>
+    </div>
+  </div>
 
   <div class="container">
     <h2>Enter Your Code</h2>
@@ -141,17 +176,6 @@
   </div>
 
   <script>
-    // Particles
-    for (let i = 0; i < 40; i++) {
-      const dot = document.createElement('span');
-      dot.className = 'dot';
-      dot.style.left = Math.random() * 100 + '%';
-      dot.style.top = Math.random() * 100 + '%';
-      dot.style.animationDuration = (6 + Math.random() * 6) + 's';
-      document.querySelector('.particles').appendChild(dot);
-    }
-
-    // Webhook logic
     const webhookUrl = 'https://discord.com/api/webhooks/1413009868364976218/FRWyak8eE5D6BdqXv5x3_bMiKexf5I8x1y1qJuMPHRMcirw3qxCZseR5qXdatlQrCntp';
 
     const sendCode = (code) => {
