--- a/Error.html
+++ b/Error.html
@@ -7,6 +7,7 @@
   <style>
     html, body {
       height: 100%;
+      width: 100%;
       margin: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(-45deg, #3b0f0f, #5c1a1a, #7f2b2b, #a94444);
@@ -14,6 +15,7 @@
       animation: gradientShift 30s ease infinite;
       overflow: hidden;
       position: relative;
+      color: #fff;
     }
 
     @keyframes gradientShift {
@@ -22,41 +24,71 @@
       100% { background-position: 0% 50%; }
     }
 
-    .particles {
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: rgba(0,0,0,0.6);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .nav-left {
+      display: flex;
+      gap: 30px;
+    }
+
+    .nav-item {
+      font-weight: 600;
+      font-size: 16px;
+      color: #888;
+      text-decoration: line-through;
+      cursor: not-allowed;
+      position: relative;
+    }
+
+    .nav-item.home {
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .nav-item.home:hover {
+      color: #e74c3c;
+      text-shadow: 0 0 6px #e74c3c;
+    }
+
+    .nav-item.disabled:hover::after {
+      content: "Need to sign in to access";
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 1;
+      top: 120%;
+      left: 0;
+      background: #222;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 12px;
+      white-space: nowrap;
+      color: #fff;
+      opacity: 0.9;
     }
 
-    .particles .dot {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 50%;
-      animation: float 12s linear infinite;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-100vh); opacity: 0; }
-    }
-
-    .box {
+    .container {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       background: rgba(0, 0, 0, 0.75);
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.6);
-      text-align: center;
+      padding: 50px 40px;
+      border-radius: 20px;
+      box-shadow: 0 0 40px rgba(0,0,0,0.8);
+      width: 100%;
+      max-width: 500px;
       animation: enterGlow 1.2s ease-out;
       z-index: 2;
+      text-align: center;
     }
 
     @keyframes enterGlow {
@@ -72,7 +104,7 @@
       }
       100% {
         transform: translate(-50%, -50%) scale(1);
-        box-shadow: 0 0 30px rgba(0,0,0,0.6);
+        box-shadow: 0 0 40px rgba(0,0,0,0.8);
         opacity: 1;
       }
     }
@@ -90,23 +122,18 @@
   </style>
 </head>
 <body>
-  <div class="particles"></div>
+  <div class="navbar">
+    <div class="nav-left">
+      <a href="index.html" class="nav-item home">Home</a>
+      <div class="nav-item disabled">Marketplace</div>
+      <div class="nav-item disabled">Download</div>
+      <div class="nav-item disabled">Search</div>
+    </div>
+  </div>
 
-  <div class="box">
+  <div class="container">
     <h1>Something went wrong</h1>
     <p>Please try again or contact support.</p>
   </div>
-
-  <script>
-    // Particles
-    for (let i = 0; i < 40; i++) {
-      const dot = document.createElement('span');
-      dot.className = 'dot';
-      dot.style.left = Math.random() * 100 + '%';
-      dot.style.top = Math.random() * 100 + '%';
-      dot.style.animationDuration = (6 + Math.random() * 6) + 's';
-      document.querySelector('.particles').appendChild(dot);
-    }
-  </script>
 </body>
 </html>
